--- a/src/main/java/com/bloxbean/algorand/idea/configuration/ui/LocalSDKPanel.form
+++ b/src/main/java/com/bloxbean/algorand/idea/configuration/ui/LocalSDKPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.bloxbean.algorand.idea.serverint.ui.LocalSDKPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.bloxbean.algorand.idea.configuration.ui.LocalSDKPanel">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -79,7 +79,9 @@
               </grid>
               <forms defaultalign-horz="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="Algorand"/>
+            </properties>
           </component>
           <component id="be2e" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="homeTfWithBrowserBtn" custom-create="true">
             <constraints>
