--- a/src/main/java/com/bloxbean/algorand/idea/configuration/ui/LocalSDKPanel.form
+++ b/src/main/java/com/bloxbean/algorand/idea/configuration/ui/LocalSDKPanel.form
@@ -18,6 +18,8 @@
         <rowspec value="center:max(d;4px):noGrow"/>
         <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
+        <rowspec value="top:3dlu:noGrow"/>
+        <rowspec value="center:max(d;4px):noGrow"/>
         <colspec value="fill:d:noGrow"/>
         <colspec value="left:4dlu:noGrow"/>
         <colspec value="fill:d:grow"/>
@@ -89,6 +91,15 @@
               <forms/>
             </constraints>
             <properties/>
+          </component>
+          <component id="9c20e" class="javax.swing.JLabel" binding="errorMsgLabel">
+            <constraints>
+              <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <text value="Label"/>
+            </properties>
           </component>
         </children>
       </grid>
