StatefulConfiguration settings added

--- a/src/main/java/com/bloxbean/algorand/idea/configuration/ui/LocalSDKPanel.form
+++ b/src/main/java/com/bloxbean/algorand/idea/configuration/ui/LocalSDKPanel.form
@@ -98,7 +98,7 @@
               <forms/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
