--- a/src/main/java/com/bloxbean/algorand/idea/configuration/ui/AlgoProjectConfiguration.form
+++ b/src/main/java/com/bloxbean/algorand/idea/configuration/ui/AlgoProjectConfiguration.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="600" height="400"/>
+      <xy x="20" y="20" width="695" height="515"/>
     </constraints>
     <properties>
       <minimumSize width="600" height="300"/>
@@ -13,6 +13,7 @@
       <tabbedpane id="c6f5b" binding="tabbedPane1" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="600" height="300"/>
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -208,6 +209,29 @@
                   </component>
                 </children>
               </grid>
+            </children>
+          </grid>
+          <grid id="c1eeb" binding="contractSettingsTab" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Contract Settings"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <nested-form id="39e57" form-file="com/bloxbean/algorand/idea/configuration/ui/ContractSettingsConfigurationPanel.form" binding="contractSettingsPanel" custom-create="true">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </nested-form>
+              <component id="3ee70" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value=" "/>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
