--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/CreateAppEntryForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/CreateAppEntryForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.bloxbean.algodea.idea.contracts.ui.CreateAppDiaglog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.bloxbean.algodea.idea.contracts.ui.CreateAppEntryForm">
   <grid id="27dc6" binding="mainPanel" layout-manager="FormLayout">
     <rowspec value="center:d:noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
