Transfer transaction support

--- a/src/main/java/com/bloxbean/algodea/idea/account/ui/AccountEntryDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/account/ui/AccountEntryDialog.form
@@ -9,6 +9,8 @@
     <colspec value="fill:d:grow"/>
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:max(d;4px):noGrow"/>
+    <colspec value="left:4dlu:noGrow"/>
+    <colspec value="fill:max(d;4px):noGrow"/>
     <constraints>
       <xy x="20" y="20" width="600" height="400"/>
     </constraints>
@@ -51,6 +53,15 @@
         </constraints>
         <properties>
           <text value="..."/>
+        </properties>
+      </component>
+      <component id="1ef8e" class="javax.swing.JButton" binding="multiSigBtn">
+        <constraints>
+          <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="Multi-Sig"/>
         </properties>
       </component>
     </children>
