--- a/src/main/java/com/bloxbean/algodea/idea/assets/ui/AssetConfigurationDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/assets/ui/AssetConfigurationDialog.form
@@ -359,7 +359,7 @@
                 <properties/>
                 <border type="none" title="Transaction Sender"/>
                 <children>
-                  <nested-form id="67ba9" form-file="com/bloxbean/algodea/idea/transaction/ui/AccountEntryInputForm.form" binding="creatorAddressInputForm" custom-create="true">
+                  <nested-form id="67ba9" form-file="com/bloxbean/algodea/idea/transaction/ui/AccountEntryInputForm.form" binding="senderAddressInputForm" custom-create="true">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
