Transaction Fee and Flat Fee. TxnDetails as separate tab for every transaction

--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/UpdateAppMainPanel.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/UpdateAppMainPanel.form
@@ -67,14 +67,14 @@
           <grid id="2fbd5" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Txn Details"/>
+              <tabbedpane title="App Txn Details"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <nested-form id="d7c1c" form-file="com/bloxbean/algodea/idea/contracts/ui/TxnDetailsEntryForm.form" binding="txnDetailsEntryForm" custom-create="true">
+              <nested-form id="d7c1c" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnDetailsEntryForm.form" binding="appTxnDetailsEntryForm" custom-create="true">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </nested-form>
               <component id="15e5e" class="javax.swing.JLabel">
@@ -85,6 +85,21 @@
                   <text value=" "/>
                 </properties>
               </component>
+            </children>
+          </grid>
+          <grid id="2691f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Txn Details"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <nested-form id="5300e" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="txnDetailsEntryForm" custom-create="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </nested-form>
             </children>
           </grid>
         </children>
