--- a/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSendTransactionDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSendTransactionDialog.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="850" height="500"/>
     </constraints>
     <properties>
-      <minimumSize width="850" height="500"/>
+      <minimumSize width="850" height="300"/>
     </properties>
     <border type="none"/>
     <children>
@@ -19,10 +19,10 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="33a37" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="33a37" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Txn Details"/>
+              <tabbedpane title="Logic Sig"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -221,21 +221,26 @@
                   </component>
                 </children>
               </grid>
-              <grid id="189dd" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+            </children>
+          </grid>
+          <grid id="d0ba1" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Txn Details"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <nested-form id="56e7a" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="transactionDtlsEntryForm" custom-create="true">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
-                <border type="none" title="Additional Details"/>
-                <children>
-                  <nested-form id="3a4b" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="transactionDtlsEntryForm" custom-create="true">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                  </nested-form>
-                </children>
-              </grid>
+              </nested-form>
+              <vspacer id="d4d96">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
         </children>
