--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnMainPanel.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnMainPanel.form
@@ -48,7 +48,7 @@
                       <forms/>
                     </constraints>
                   </nested-form>
-                  <nested-form id="c86c3" form-file="com/bloxbean/algodea/idea/contracts/ui/TxnDetailsEntryForm.form" binding="txnDetailsEntryForm" custom-create="true">
+                  <nested-form id="c86c3" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnDetailsEntryForm.form" binding="appTxnDetailsEntryForm" custom-create="true">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                       <forms/>
@@ -56,6 +56,26 @@
                   </nested-form>
                 </children>
               </grid>
+            </children>
+          </grid>
+          <grid id="37ab8" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Txn Details"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <nested-form id="d215b" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="txnDtlEntryForm" custom-create="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </nested-form>
+              <vspacer id="a0e58">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
         </children>
